Bug 150157: DosWrite is not returning an error when the disk is full. We can tell the write failed if we did a partial write.  The patch is contributed by Michael Kaply <mkaply@us.ibm.com>.